fixed the alignment of the input field in contact form section and worked on the buttons

--- a/style.css
+++ b/style.css
@@ -6,6 +6,22 @@
     box-sizing: border-box;
     -webkit-overflow-scrolling: touch;
 }
+input[type=text], input[type=email], textarea {
+	width: 100%;
+}
+button.btn-primary {
+    width: 100%;
+    height: 50px;
+    /* background-color: #007bff; */
+    border: none;
+    border-radius: 3px;
+}
+a.lg-btn {
+    text-decoration: none;
+    color: white;
+    font-family: 'Oswald', sans-serif;
+    width: 100%;
+}
 
 
 /* body {
@@ -162,14 +178,14 @@ body .right-label .row .label-container img {
     /* z-index: 100; */
     width: 100%;
     height: auto;
-    margin: 20px auto
+    margin: 20px auto;
 }
 body .bg .overlay .Rcontainer .column #about-me p {
     margin-top: 20px;
     font-family: 'Lato', sans-serif;
     letter-spacing: .8px;
     line-height: 1.5;
-    text-align: justify
+    text-align: justify;
 }
 body .bg .overlay .Rcontainer .column #about-me .label-container .label3 {
     border-bottom: solid 1px white;
@@ -182,14 +198,18 @@ body .bg .overlay .Rcontainer .column #top-projects .label-container .proj-btn {
 body .bg .overlay .Rcontainer .column #top-projects .label-container .proj-btn button {
     margin: 0 10px;
     width: 100px;
+    color: #007bff;
 }
-body .bg .overlay .Rcontainer .column #top-projects .label-container .view-more {
-    display: flex;
-    justify-content: center;
+body .bg .overlay .Rcontainer .column #top-projects .label-container .proj-btn button:hover {
+    background-color: #007bff;
+    color: white;
+    border: 1px solid #007bff;
 }
 body .bg .overlay .Rcontainer .column #top-projects .label-container .view-more button {
     width: 50%;
     margin: 50px auto;
+    display: flex;
+    justify-content: center;
 }
 body .bg .overlay .Rcontainer .column #top-projects .label-container .img {
     display: none;
@@ -202,12 +222,11 @@ body .bg .overlay .Rcontainer .column #resume .label-container .label5 {
     border-bottom: solid 1px white;
     padding-bottom: 20px;
 }
-body .bg .overlay .Rcontainer .column #resume .label-container .open-resume {
-    display: flex;
-    justify-content: center;
-}
 body .bg .overlay .Rcontainer .column #resume .label-container .open-resume button {
     width: 50%;
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
 }
 body .bg .overlay .Rcontainer .column #contact-me .label-container .label6 {
     border-bottom: solid 1px white;
@@ -232,18 +251,58 @@ body .overlay .right-label #resume {
 body .overlay .right-label #contact-me {
     padding-top: 100px;
     margin-bottom: 100px;
+    color: white;
+    padding-left: 0 !important;
+    padding-right: 0 !important;
 }
-body .overlay .right-label #contact-me .label-container .contact-form {
+body .overlay .right-label #contact-me .label-container .mobile-form-container {
+    display: none;
+}
+body .overlay .right-label #contact-me .label-container .form-container {
+    width: 100%; 
+    margin: 20px auto 0;
+    font-family: 'Lato', sans-serif;
+    letter-spacing: .8px;
+}
+body .overlay .right-label #contact-me .label-container .form-container .row {
+    margin: 10px 0;
+}
+body .overlay .right-label #contact-me .label-container .form-container .name .sub-name {
+    padding: 0;
+}
+body .overlay .right-label #contact-me .label-container .form-container .email .sub-email {
+    padding: 0;
+}
+body .overlay .right-label #contact-me .label-container .form-container .phone .sub-phone {
+    padding: 0;
+}
+body .overlay .right-label #contact-me .label-container .form-container .phone .second-container .third-container {
+	margin: 0;
+}
+body .overlay .right-label #contact-me .label-container .form-container .phone .second-container .third-container .tel-container {
+	padding: 0;
+}
+body .overlay .right-label #contact-me .label-container .form-container .form-btn {
     display: flex;
-    justify-content: center
+    justify-content: flex-end;
+    padding: 0;
+} 
+body .overlay .right-label #contact-me .label-container .form-container .form-btn button {
+    width: 100%;
 }
-body .overlay .right-label #contact-me .label-container .contact-form input {
+body .overlay .right-label #contact-me .label-container .form-container .subject .sub-subject {
+    padding: 0;
+}
+body .overlay .right-label #contact-me .label-container .form-container .message .sub-message {
+    padding: 0;
+}
 
-}
-body .overlay .right-label #contact-me .label-container .contact-form .form-btn {
-    display: flex;
-    justify-content: flex-end
-}
+
+
+
+
+
+
 body .overlay .right-label .row .label-container .mid-txt {
     opacity: 1;
 }
@@ -259,12 +318,7 @@ body .overlay .right-label .rotate {
 
 
 
-.gray{
-    background: gray;
-    border: 1px dashed white;
-    opacity: .5;
-    
-}
+
 
 @media (min-width: 1600px) {
     body .overlay .right-label {
@@ -300,7 +354,7 @@ body .overlay .right-label .rotate {
         display: none !important;
     }
     body .overlay .column {
-        margin-left: 0;
+        /* margin-left: 0; */
         margin: 0 auto;
         width: 100%;
     }
@@ -333,15 +387,48 @@ body .overlay .right-label .rotate {
         margin: 0 auto;
         width: 70%;
     }
+    body .overlay .right-label #contact-me .label-container .form-container{
+        display: none;
+    }
+    body .overlay .right-label #contact-me .label-container .mobile-form-container{
+        margin: 20px auto 500px;
+        display: block;
+        width: 60%;
+    }
+    body .overlay .right-label #contact-me .label-container .mobile-form-container .row {
+        margin: 5px 0;
+    }
+    body .overlay .right-label #contact-me .label-container .mobile-form-container .row input {
+        margin: 5px 0;
+    }
+    body .overlay .right-label #contact-me .label-container .mobile-form-container .row .tel-container {
+        padding: 0;
+    }
+    body .overlay .right-label #contact-me .label-container .mobile-form-container .form-btn {
+        display: flex;
+        justify-content: flex-end;
+    } 
+    body .overlay .right-label #contact-me .label-container .mobile-form-container .form-btn button {
+        width: 100%;
+    }
+    
+
+    
 }
-/* @media (max-width: 992px) {
-    body .bg .overlay .Rcontainer .column #top-projects .label-container .gif {
+@media (max-width: 992px) {
+    body .right-label .row .label-container h1 {
+        font-size: 3rem;
+    }
+    body .bg .overlay .Rcontainer .column #about-me p {
+        font-size: .7rem;
+    }
+    /* body .bg .overlay .Rcontainer .column #top-projects .label-container .gif {
         display: none;
     }
     body .bg .overlay .Rcontainer .column #top-projects .label-container .img {
         display: block;
-    }
-} */
+    } */
+}
 @media (max-width: 767px) {
     /* body .bg .overlay .Rcontainer .column .row .label-container {
         flex: 0 0 100%;
